fix: layout issue

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,6 +46,7 @@ p {
   background: none;
   border: none;
   padding-top: 10px;
+  text-align: center;
 }
 
 img {
